[package]
name = "regulator"
version = "0.1.0"
edition = "2021"
authors = ["Matt DeVuyst"]
description = "A tool to proxy and rate limit TCP connections"
license = "MIT"
keywords = ["proxy", "rate-limit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
